[gd_scene load_steps=18 format=3 uid="uid://bwx02o77vcyil"]

[ext_resource type="Script" uid="uid://bagn0poke3314" path="res://Scripts/Worlds/decompression_chamber_script.gd" id="1_7i3by"]
[ext_resource type="PackedScene" uid="uid://coi6i5pj36tp4" path="res://Scenes/settings.tscn" id="2_bfmrm"]
[ext_resource type="PackedScene" uid="uid://ilp6munenn3g" path="res://Scenes/GUI/GUI.tscn" id="3_nuk0v"]
[ext_resource type="Texture2D" uid="uid://c6t8h3brhtjig" path="res://Assets/Img/Backgrounds/my_spaceship/dark.png" id="4_khwgt"]
[ext_resource type="Texture2D" uid="uid://b1twotspxigfm" path="res://Assets/Img/Backgrounds/my_spaceship/dark_central7E.png" id="5_hwtj0"]
[ext_resource type="Texture2D" uid="uid://cgfp0nfxixvog" path="res://Assets/Img/Backgrounds/my_spaceship/decompression_chamberE_wall.png" id="6_xgvh1"]
[ext_resource type="Texture2D" uid="uid://caunwx01uvuw6" path="res://Assets/Img/Backgrounds/my_spaceship/decompression_chamberE_front.png" id="7_7jxec"]
[ext_resource type="Texture2D" uid="uid://dmy8w03i7jhe8" path="res://Assets/Img/wall_space/space01.png" id="8_apx74"]
[ext_resource type="PackedScene" uid="uid://bdrtf4n7o5bmd" path="res://Scenes/LevelManager/Doors/scene_trigger.tscn" id="9_od6c0"]
[ext_resource type="PackedScene" uid="uid://bi1htbn8ci5sv" path="res://Scenes/Player/Player.tscn" id="10_pyarw"]
[ext_resource type="PackedScene" uid="uid://d4iqjdybw8148" path="res://Scenes/GUI/menu_popup.tscn" id="11_xkqma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3nj6"]
size = Vector2(1002.86, 38.5707)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmvjm"]
size = Vector2(38.5716, 548.572)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_em65l"]
size = Vector2(57.1428, 581.429)

[sub_resource type="CanvasTexture" id="CanvasTexture_dni45"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2qh3"]
size = Vector2(19, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42gcm"]
size = Vector2(18, 74)

[node name="Decompression_chamber" type="Node2D"]
y_sort_enabled = true
position = Vector2(589, 352)
script = ExtResource("1_7i3by")

[node name="Settings" parent="." instance=ExtResource("2_bfmrm")]

[node name="GUI" parent="." instance=ExtResource("3_nuk0v")]

[node name="dark" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(-41, 32)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_khwgt")
offset = Vector2(0, 150)

[node name="explored" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-658, 6)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_hwtj0")

[node name="back" type="Sprite2D" parent="."]
position = Vector2(-47, -133)
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_xgvh1")
offset = Vector2(0, 500)

[node name="StaticBody2D" type="StaticBody2D" parent="back"]

[node name="up_roof" type="CollisionShape2D" parent="back/StaticBody2D"]
position = Vector2(25.7145, 137.144)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_v3nj6")

[node name="down_floor" type="CollisionShape2D" parent="back/StaticBody2D"]
position = Vector2(34.2863, 807.144)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_v3nj6")

[node name="left_wall" type="CollisionShape2D" parent="back/StaticBody2D"]
position = Vector2(-638.571, 431.429)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_mmvjm")

[node name="right_wall" type="CollisionShape2D" parent="back/StaticBody2D"]
position = Vector2(777.144, 435.714)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_em65l")

[node name="front" type="Sprite2D" parent="back"]
z_index = 2
position = Vector2(-2.85706, 499.999)
texture = ExtResource("7_7jxec")

[node name="Background" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
layer = -99

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxBackground"]
modulate = Color(0, 0, 0, 1)
offset_left = -1026.0
offset_top = -954.0
offset_right = 2217.0
offset_bottom = 1526.0
texture = SubResource("CanvasTexture_dni45")
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2(589, 352)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2(-96, -46)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_apx74")

[node name="EntranceMarkers" type="Node2D" parent="."]

[node name="Door_right" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(144, 12)

[node name="Door_left" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(-196, 8)

[node name="SceneTrigger" parent="." instance=ExtResource("9_od6c0")]
connected_scene = "Universe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneTrigger"]
position = Vector2(193.5, 7)
shape = SubResource("RectangleShape2D_r2qh3")

[node name="SceneTrigger2" parent="." instance=ExtResource("9_od6c0")]
connected_scene = "command_room"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneTrigger2"]
position = Vector2(-248, 10)
shape = SubResource("RectangleShape2D_42gcm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-16, 55)
scale = Vector2(0.9, 0.9)

[node name="Player" parent="." instance=ExtResource("10_pyarw")]
position = Vector2(117, 107)

[node name="Popups" type="Node2D" parent="."]

[node name="Menu" parent="Popups" instance=ExtResource("11_xkqma")]
visible = false
